<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_empty_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/pb_load_more"
        android:layout_width="@dimen/progress_small"
        android:layout_height="@dimen/progress_small"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/pb_load_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rl_list_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_no_net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/empty_view_image"
                android:layout_height="@dimen/empty_view_image"
                android:src="@drawable/ic_no_network" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/msg_no_network"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large" />

            <Button
                android:id="@+id/btn_retry_service"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/empty_button_height"
                android:layout_marginTop="@dimen/margin_large"
                android:elevation="@dimen/empty_button_elevate"
                android:background="@drawable/btn_border_primary"
                android:clickable="true"
                android:paddingLeft="@dimen/margin_large"
                android:paddingRight="@dimen/margin_large"
                android:text="@string/msg_retry_text"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/empty_view_image"
                android:layout_height="@dimen/empty_view_image"
                android:src="@drawable/ic_no_results" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/msg_no_data"
                android:textColor="@color/divider_color"
                android:textSize="@dimen/text_large" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>